tests/ui/eii/track_caller_static_errors.stderr
error: `#[track_caller]` attribute cannot be used on foreign statics
  --> $DIR/track_caller_static_errors.rs:5:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^
   |
   = help: `#[track_caller]` can only be applied to functions

error: aborting due to 1 previous error

